<resources>
    <string name="app_name">Dino Pedia</string>
    <string name="info_familia_icon">Gambar Famili</string>
    <string name="info_familia_name">Nama Famili</string>
    <string name="info_familia_desc">Deskripsi Famili</string>
    <string name="info_familia_periode">Periode Hidup</string>
    <string name="info_familia_characteristic">Karakteristik Fisik</string>
    <string name="info_familia_habitat">Habitat dan Lingkungan</string>
    <string name="info_familia_perilaku">Perilaku dan Klasifikasi</string>
    <string name="info_dino_icon">Gambar Dinosaurus</string>
    <string name="info_dino_name">Nama Dinosaurus</string>
    <string name="info_dino_desc">Deskripsi Dinosaurus</string>
    <string name="info_dino_characteristic">Karakteristik</string>
    <string name="info_dino_kelompok">Kelompok</string>
    <string name="info_dino_habitat">Habitat</string>
    <string name="info_dino_makanan">Makanan</string>
    <string name="info_dino_panjang">Panjang</string>
    <string name="info_dino_tinggi">Tinggi</string>
    <string name="info_dino_bobot">Bobot dan Kelemahan</string>
    <string-array name="familia_icon">
        <item>@drawable/angka_1</item>
        <item>@drawable/angka_2</item>
        <item>@drawable/angka_3</item>
        <item>@drawable/angka_4</item>
        <item>@drawable/angka_5</item>
        <item>@drawable/angka_6</item>
        <item>@drawable/angka_7</item>
        <item>@drawable/angka_8</item>
    </string-array>
    <string-array name="familia_name">
        <item>Ornithischia</item>
        <item>Theropoda</item>
        <item>Ankylosauria</item>
        <item>Dromaeosauridae</item>
        <item>Troodontidae</item>
        <item>Ceratopsia</item>
        <item>Stegosauria</item>
        <item>Oviraptorosauria</item>
    </string-array>
    <string-array name="familia_desc">
        <item>Ornithischia adalah famili yang mencakup dinosaurus yang memiliki tulang atau osteoderm pada kepala dan badan. Mereka adalah hewan yang sangat beragam, termasuk herbivora seperti Triceratops dan Stegosaurus, serta carnivora seperti Velociraptor. Ornithischia dikenal karena "kerucut" atau "dinding" yang terdiri dari tulang yang membentuk "dinding" di belakang kepala, yang memberikan perlindungan tambahan.</item>
        <item>Theropoda adalah famili yang mencakup dinosaurus yang memiliki kaki yang sangat kuat dan seringkali memiliki gigi yang sangat agresif. Mereka adalah hewan yang sangat beragam, termasuk carnivora seperti Tyrannosaurus Rex dan Velociraptor. Theropoda juga mencakup beberapa dinosaurus yang tidak sepenuhnya carnivora, seperti oviraptorosauria.</item>
        <item>Ankylosauria adalah famili yang mencakup dinosaurus herbivora yang memiliki tulang yang sangat kuat dan "dinding" yang terdiri dari tulang yang membentuk "dinding" di belakang kepala. Mereka dikenal karena kekuatan dan perlindungan yang mereka miliki, yang membuat mereka menjadi hewan yang sangat berharga dalam ekosistem mereka.</item>
        <item>Dromaeosauridae adalah famili yang mencakup dinosaurus carnivora yang dikenal karena gigi yang sangat agresif dan kaki yang sangat kuat. Mereka adalah hewan yang sangat beragam, termasuk Velociraptor dan Deinonychus. Dromaeosauridae juga mencakup beberapa dinosaurus yang tidak sepenuhnya carnivora, seperti oviraptorosauria.</item>
        <item>Troodontidae adalah famili yang mencakup dinosaurus carnivora yang dikenal karena gigi yang sangat agresif dan kaki yang sangat kuat. Mereka adalah hewan yang sangat beragam, termasuk Troodon dan Anchiornis. Troodontidae juga mencakup beberapa dinosaurus yang tidak sepenuhnya carnivora, seperti oviraptorosauria.</item>
        <item>Ceratopsia adalah famili yang mencakup dinosaurus herbivora yang terkenal karena "kerucut" yang besar di kepalanya. Mereka adalah hewan yang sangat beragam, termasuk Triceratops dan Centrosaurus. Ceratopsia dikenal karena "kerucut" atau "dinding" yang terdiri dari tulang yang membentuk "dinding" di belakang kepala, yang memberikan perlindungan tambahan.</item>
        <item>Stegosauria adalah famili yang mencakup dinosaurus herbivora yang dikenal karena "dinding" yang terdiri dari tulang yang membentuk "dinding" di belakang kepala. Mereka adalah hewan yang sangat beragam, termasuk Stegosaurus dan Kentrosaurus. Stegosauria dikenal karena "dinding" yang terdiri dari tulang yang membentuk "dinding" di belakang kepala, yang memberikan perlindungan tambahan.</item>
        <item>Oviraptorosauria adalah famili yang mencakup dinosaurus yang dikenal karena ciri khas seperti kepala yang kecil dan tulang yang sangat kuat. Mereka adalah hewan yang sangat beragam, termasuk Oviraptor dan Caudipteryx. Oviraptorosauria juga mencakup beberapa dinosaurus yang tidak sepenuhnya carnivora, seperti oviraptorosauria.</item>
    </string-array>
    <string-array name="familia_periode">
        <item>Ornithischia adalah famili yang memiliki periode kehidupan yang luas, mencakup sebagian besar era Mesozoikum. Mereka pertama kali muncul pada era Trias dan berakhir pada era Kredit.</item>
        <item>Theropoda juga memiliki periode kehidupan yang luas, mencakup sebagian besar era Mesozoikum. Mereka pertama kali muncul pada era Trias dan berakhir pada era Kredit.</item>
        <item>Ankylosauria adalah famili yang memiliki periode kehidupan yang luas, mencakup sebagian besar era Mesozoikum. Mereka pertama kali muncul pada era Jura dan berakhir pada era Kredit.</item>
        <item>Dromaeosauridae adalah famili yang memiliki periode kehidupan yang luas, mencakup sebagian besar era Mesozoikum. Mereka pertama kali muncul pada era Jura dan berakhir pada era Kredit.</item>
        <item>Troodontidae adalah famili yang memiliki periode kehidupan yang luas, mencakup sebagian besar era Mesozoikum. Mereka pertama kali muncul pada era Jura dan berakhir pada era Kredit.</item>
        <item>Ceratopsia adalah famili yang memiliki periode kehidupan yang luas, mencakup sebagian besar era Mesozoikum. Mereka pertama kali muncul pada era Jura dan berakhir pada era Kredit.</item>
        <item>Stegosauria adalah famili yang memiliki periode kehidupan yang luas, mencakup sebagian besar era Mesozoikum. Mereka pertama kali muncul pada era Jura dan berakhir pada era Kredit.</item>
        <item>Oviraptorosauria adalah famili yang memiliki periode kehidupan yang luas, mencakup sebagian besar era Mesozoikum. Mereka pertama kali muncul pada era Jura dan berakhir pada era Kredit.</item>
    </string-array>
    <string-array name="familia_characteristic">
        <item>Ornithischia adalah dinosaurus yang memiliki tulang atau osteoderm pada kepala dan badan. Mereka dikenal karena "kerucut" atau "dinding" yang terdiri dari tulang yang membentuk "dinding" di belakang kepala, yang memberikan perlindungan tambahan. Ornithischia mencakup herbivora seperti Triceratops dan Stegosaurus, serta carnivora seperti Velociraptor.</item>
        <item>Theropoda adalah dinosaurus yang memiliki kaki yang sangat kuat dan seringkali memiliki gigi yang sangat agresif. Mereka adalah hewan yang sangat beragam, termasuk carnivora seperti Tyrannosaurus Rex dan Velociraptor. Theropoda juga mencakup beberapa dinosaurus yang tidak sepenuhnya carnivora, seperti oviraptorosauria.</item>
        <item>Ankylosauria adalah dinosaurus herbivora yang memiliki tulang yang sangat kuat dan "dinding" yang terdiri dari tulang yang membentuk "dinding" di belakang kepala. Mereka dikenal karena kekuatan dan perlindungan yang mereka miliki, yang membuat mereka menjadi hewan yang sangat berharga dalam ekosistem mereka. Ankylosauria mencakup dinosaurus seperti Ankylosaurus dan Nodosaurus.</item>
        <item>Dromaeosauridae adalah dinosaurus carnivora yang dikenal karena gigi yang sangat agresif dan kaki yang sangat kuat. Mereka adalah hewan yang sangat beragam, termasuk Velociraptor dan Deinonychus. Dromaeosauridae juga mencakup beberapa dinosaurus yang tidak sepenuhnya carnivora, seperti oviraptorosauria.</item>
        <item>Troodontidae adalah dinosaurus carnivora yang dikenal karena gigi yang sangat agresif dan kaki yang sangat kuat. Mereka adalah hewan yang sangat beragam, termasuk Troodon dan Anchiornis. Troodontidae juga mencakup beberapa dinosaurus yang tidak sepenuhnya carnivora, seperti oviraptorosauria.</item>
        <item>Ceratopsia adalah dinosaurus herbivora yang terkenal karena "kerucut" yang besar di kepalanya. Mereka adalah hewan yang sangat beragam, termasuk Triceratops dan Centrosaurus. Ceratopsia dikenal karena "kerucut" atau "dinding" yang terdiri dari tulang yang membentuk "dinding" di belakang kepala, yang memberikan perlindungan tambahan.</item>
        <item>Stegosauria adalah dinosaurus herbivora yang dikenal karena "dinding" yang terdiri dari tulang yang membentuk "dinding" di belakang kepala. Mereka adalah hewan yang sangat beragam, termasuk Stegosaurus dan Kentrosaurus. Stegosauria dikenal karena "dinding" yang terdiri dari tulang yang membentuk "dinding" di belakang kepala, yang memberikan perlindungan tambahan.</item>
        <item>Oviraptorosauria adalah dinosaurus yang dikenal karena ciri khas seperti kepala yang kecil dan tulang yang sangat kuat. Mereka adalah hewan yang sangat beragam, termasuk Oviraptor dan Caudipteryx. Oviraptorosauria juga mencakup beberapa dinosaurus yang tidak sepenuhnya carnivora, seperti oviraptorosauria.</item>
    </string-array>
    <string-array name="familia_habitat">
        <item>Ornithischia hidup di berbagai habitat, termasuk hutan, savana, dan tundra. Mereka dapat ditemukan di berbagai bagian dunia, termasuk Amerika Utara, Eropa, dan Asia.</item>
        <item>Theropoda hidup di berbagai habitat, termasuk hutan, savana, dan tundra. Mereka juga dapat ditemukan di berbagai bagian dunia, termasuk Amerika Utara, Eropa, dan Asia.</item>
        <item>Ankylosauria hidup di berbagai habitat, termasuk hutan, savana, dan tundra. Mereka dapat ditemukan di berbagai bagian dunia, termasuk Amerika Utara, Eropa, dan Asia.</item>
        <item>Dromaeosauridae hidup di berbagai habitat, termasuk hutan, savana, dan tundra. Mereka juga dapat ditemukan di berbagai bagian dunia, termasuk Amerika Utara, Eropa, dan Asia.</item>
        <item>Troodontidae hidup di berbagai habitat, termasuk hutan, savana, dan tundra. Mereka juga dapat ditemukan di berbagai bagian dunia, termasuk Amerika Utara, Eropa, dan Asia.</item>
        <item>Ceratopsia hidup di berbagai habitat, termasuk hutan, savana, dan tundra. Mereka dapat ditemukan di berbagai bagian dunia, termasuk Amerika Utara, Eropa, dan Asia.</item>
        <item>Stegosauria hidup di berbagai habitat, termasuk hutan, savana, dan tundra. Mereka dapat ditemukan di berbagai bagian dunia, termasuk Amerika Utara, Eropa, dan Asia.</item>
        <item>Oviraptorosauria hidup di berbagai habitat, termasuk hutan, savana, dan tundra. Mereka juga dapat ditemukan di berbagai bagian dunia, termasuk Amerika Utara, Eropa, dan Asia.</item>
    </string-array>
</resources>